--- a/src/lowlandtech/Pages/SimpleLink.razor
+++ b/src/lowlandtech/Pages/SimpleLink.razor
@@ -1,12 +1,12 @@
-﻿@page "/"
+﻿@page "/simple-link"
 <ContentHeader>
     <Header>
-        <PageTitle Title="Index" />
+        <PageTitle Title="Simple Link" />
     </Header>
 </ContentHeader>
 <ContentMain>
     <Card>
-        <Title><CardTitle>Title</CardTitle></Title>
+        <Title><CardTitle>Some simple link content</CardTitle></Title>
         <Body>Contents</Body>
     </Card>
 </ContentMain>
