--- a/src/lowlandtech/Pages/Messages/SeeAllMessages.razor
+++ b/src/lowlandtech/Pages/Messages/SeeAllMessages.razor
@@ -1,7 +1,7 @@
-﻿@page "/"
+﻿@page "/messages/see-all-messages"
 <ContentHeader>
     <Header>
-        <PageTitle Title="Index" />
+        <PageTitle Title="All Messages" />
     </Header>
 </ContentHeader>
 <ContentMain>
