--- a/src/lowlandtech/Pages/Messages/SeeAllNotifications.razor
+++ b/src/lowlandtech/Pages/Messages/SeeAllNotifications.razor
@@ -1,7 +1,7 @@
-﻿@page "/"
+﻿@page "/messages/see-all-notifications"
 <ContentHeader>
     <Header>
-        <PageTitle Title="Index" />
+        <PageTitle Title="All Notifications" />
     </Header>
 </ContentHeader>
 <ContentMain>
