--- a/src/lowlandtech/Shared/MainLayout.razor
+++ b/src/lowlandtech/Shared/MainLayout.razor
@@ -78,89 +78,8 @@
         <SideBarUserPanel ImageEffect="ImageEffect.Circle" Link="starter-pages/user-page" Elevation="Elevation.Three" UserImage="dist/img/user2-160x160.jpg">Alexander Pierce</SideBarUserPanel>
         @*<SideBarSearch></SideBarSearch>*@
         <SideBarMenu>
-            <SideBarMenuItem Link="widgets" Icon="fas fa-th">
-                Widgets
-            </SideBarMenuItem>
-            <SideBarTreeView Icon="fas fa-copy">
-                <Title>Layout Options</Title>
-                <Items>
-                    <SideBarMenuItem Icon="far fa-circle" Link="layout/grid-system">
-                        Grid System
-                    </SideBarMenuItem>
-                </Items>
-            </SideBarTreeView>
-            <SideBarTreeView Icon="fas fa-tachometer-alt">
-                <Title>Starter Pages</Title>
-                <Items>
-                    <SideBarMenuItem Icon="far fa-circle" Link="starter-pages/active-page">
-                        Active Page
-                    </SideBarMenuItem>
-                    <SideBarMenuItem Icon="far fa-circle">
-                        Inactive Page
-                    </SideBarMenuItem>
-                </Items>
-            </SideBarTreeView>
-            <SideBarTreeView Icon="fas fa-tachometer-alt">
-                <Title>Content Injections</Title>
-                <Items>
-                    <SideBarMenuItem Icon="far fa-circle" Link="injections/navbar-left">
-                        NavBar Left
-                    </SideBarMenuItem>
-                    <SideBarMenuItem Icon="far fa-circle" Link="injections/navbar-left-override">
-                        NavBar Left Override
-                    </SideBarMenuItem>
-                </Items>
-            </SideBarTreeView>
-            <SideBarTreeView Icon="fas fa-tree">
-                <Title>UI Elements</Title>
-                <Items>
-                    <SideBarMenuItem Icon="far fa-circle" Link="ui/general">
-                        General
-                    </SideBarMenuItem>
-                    <SideBarMenuItem Icon="far fa-circle" Link="ui/buttons">
-                        Buttons
-                    </SideBarMenuItem>
-                    <SideBarMenuItem Link="ui/navbar" Icon="far fa-circle">
-                        Navbar & Tabs
-                    </SideBarMenuItem>
-                </Items>
-            </SideBarTreeView>
-            <SideBarTreeView Icon="fas fa-edit">
-                <Title>Forms</Title>
-                <Items>
-                    <SideBarMenuItem Icon="far fa-circle" Link="forms/general">
-                        General Elements
-                    </SideBarMenuItem>
-                    <SideBarMenuItem Icon="far fa-circle" Link="forms/advanced">
-                        Advanced Elements
-                    </SideBarMenuItem>
-                </Items>
-            </SideBarTreeView>
-            <SideBarTreeView Icon="fas fa-table">
-                <Title>Tables</Title>
-                <Items>
-                    <SideBarMenuItem Icon="far fa-circle" Link="simple-tables">
-                        Simple Tables
-                    </SideBarMenuItem>
-                </Items>
-            </SideBarTreeView>
-            <SideBarTreeView Icon="far fa-plus-square">
-                <Title>Extras</Title>
-                <Items>
-                    <SideBarMenuItem Icon="far fa-circle" Link="lockscreen">
-                        Lockscreen
-                    </SideBarMenuItem>
-                    <SideBarMenuItem Icon="far fa-circle" Link="404">
-                        Error 404
-                    </SideBarMenuItem>
-                    <SideBarMenuItem Icon="far fa-circle" Link="500">
-                        Error 500
-                    </SideBarMenuItem>
-                </Items>
-            </SideBarTreeView>
-            <SideBarMenuItem Link="simple-link" Icon="fas fa-th">
-                Simple Link
-                <span class="right badge badge-danger">New</span>
+            <SideBarMenuItem Link="" Icon="fas fa-th">
+                Home
             </SideBarMenuItem>
         </SideBarMenu>
     </SideBar>
