chore: change company name

--- a/src/lowlandtech/Shared/MainLayout.razor
+++ b/src/lowlandtech/Shared/MainLayout.razor
@@ -72,7 +72,7 @@
     </NavBarRight>
 </NavBar>
 <SideBarContainer>
-    <BrandLogo Link="https://adminlte.io/" Logo="dist/img/AdminLTELogo.png">AdminLTE 3</BrandLogo>
+    <BrandLogo Link="https://lowlandtech.com/" Logo="dist/img/AdminLTELogo.png">AdminLTE 3</BrandLogo>
     <SideBar>
         <!-- Sidebar user panel (optional) -->
         <SideBarUserPanel ImageEffect="ImageEffect.Circle" Link="starter-pages/user-page" Elevation="Elevation.Three" UserImage="dist/img/user2-160x160.jpg">Alexander Pierce</SideBarUserPanel>
@@ -90,10 +90,10 @@
 <ControlSideBar>Hello World!</ControlSideBar>
 <MainFooter>
     <Default>
-        <strong>Copyright &copy; 2014-2020 <a href="https://adminlte.io">AdminLTE.io</a>.</strong> All rights reserved.
+        <strong>Copyright &copy; 2014-2020 <a href="https://lowlandtech.com">lowlandtech.com</a>.</strong> All rights reserved.
     </Default>
     <Right>
-        Blazorized by Sjef van Leeuwen
+        @@wendellmva
     </Right>
 </MainFooter>
 @code {
