--- a/src/lowlandtech/Shared/MainLayout.razor
+++ b/src/lowlandtech/Shared/MainLayout.razor
@@ -1,16 +1,13 @@
 @inherits LayoutComponentBase
-@inject NavigationManager NavigationManager
-@inject IJSRuntime JS
-@inject ILayoutManager layoutManager
-@inject NavBarLeftInjectableMenu navBarLeftInjectableMenu
+
 <NavBar>
     <NavBarLeft>
-        @if (!navBarLeftInjectableMenu.OverrideParentContent)
+        @if (!NavBarLeftInjectableMenu.OverrideParentContent)
         {
             <NavBarMenuItem Link="/">Home</NavBarMenuItem>
             <NavBarMenuItem Link="/search">Search</NavBarMenuItem><!-- defaults to # -->
         }
-        @navBarLeftInjectableMenu.content <!-- Injectable for custom menu content per page -->
+        @NavBarLeftInjectableMenu.content <!-- Injectable for custom menu content per page -->
     </NavBarLeft>
     <NavBarSearch></NavBarSearch>
     <NavBarRight>
@@ -18,28 +15,28 @@
             <NavBarBadge Color="Color.Danger" Icon="far fa-comments">4</NavBarBadge>
             <NavBarDropDownMenu>
                 <NavBarDropDownMenuItem>
-                    <UserMessage DateTime="dt.AddMinutes(-2)" ProfilePicture="dist/img/user7-128x128.jpg" Icon="fas fa-star">
+                    <UserMessage DateTime="_dt.AddMinutes(-2)" ProfilePicture="dist/img/user7-128x128.jpg" Icon="fas fa-star">
                         <UserName>Patricia Maundrell</UserName>
                         <Message>Follow up</Message>
                     </UserMessage>
                 </NavBarDropDownMenuItem>
                 <DropdownDivider />
                 <NavBarDropDownMenuItem>
-                    <UserMessage DateTime="dt.AddHours(-4)" ProfilePicture="dist/img/user1-128x128.jpg" Icon="fas fa-star" IconColor="Color.Warning">
+                    <UserMessage DateTime="_dt.AddHours(-4)" ProfilePicture="dist/img/user1-128x128.jpg" Icon="fas fa-star" IconColor="Color.Warning">
                         <UserName>Brad Diesel</UserName>
                         <Message>Call me whenever you can...</Message>
                     </UserMessage>
                 </NavBarDropDownMenuItem>
                 <DropdownDivider />
                 <NavBarDropDownMenuItem>
-                    <UserMessage DateTime="dt.AddDays(-8)" ProfilePicture="dist/img/user8-128x128.jpg" Icon="fas fa-star" IconColor="Color.Danger">
+                    <UserMessage DateTime="_dt.AddDays(-8)" ProfilePicture="dist/img/user8-128x128.jpg" Icon="fas fa-star" IconColor="Color.Danger">
                         <UserName>John Pierce</UserName>
                         <Message>I got your message bro</Message>
                     </UserMessage>
                 </NavBarDropDownMenuItem>
                 <DropdownDivider />
                 <NavBarDropDownMenuItem>
-                    <UserMessage DateTime="dt.AddDays(-31)" ProfilePicture="dist/img/user3-128x128.jpg" Icon="fas fa-star">
+                    <UserMessage DateTime="_dt.AddDays(-31)" ProfilePicture="dist/img/user3-128x128.jpg" Icon="fas fa-star">
                         <UserName>Nora Silvester</UserName>
                         <Message>The subject goes here</Message>
                     </UserMessage>
@@ -53,15 +50,15 @@
             <NavBarDropDownMenu>
                 <DropdownHeader>15 Notifications</DropdownHeader>
                 <DropdownDivider></DropdownDivider>
-                <NotificationMessage DateTime="dt.AddMinutes(-3)" Icon="fas fa-envelope mr-2">
+                <NotificationMessage DateTime="_dt.AddMinutes(-3)" Icon="fas fa-envelope mr-2">
                     <Message>4 new messages</Message>
                 </NotificationMessage>
                 <DropdownDivider></DropdownDivider>
-                <NotificationMessage DateTime="dt.AddHours(-12)" Icon="fas fa-users mr-2">
+                <NotificationMessage DateTime="_dt.AddHours(-12)" Icon="fas fa-users mr-2">
                     <Message>8 friend requests</Message>
                 </NotificationMessage>
                 <DropdownDivider></DropdownDivider>
-                <NotificationMessage DateTime="dt.AddDays(-2)" Icon="fas fa-file mr-2">
+                <NotificationMessage DateTime="_dt.AddDays(-2)" Icon="fas fa-file mr-2">
                     <Message>3 new reports</Message>
                 </NotificationMessage>
                 <DropdownDivider></DropdownDivider>
@@ -96,36 +93,3 @@
         @@wendellmva
     </Right>
 </MainFooter>
-@code {
-    protected override void OnParametersSet()
-    {
-        // content = null; for refreshing custom menu injectables per page.
-        // no override; reset default to show parent menu content items.
-        navBarLeftInjectableMenu.SetContent(null, false);
-    }
-
-    private DateTime dt = DateTime.Now;
-
-    private void SeeAllMessages(Tuple<IDropdownFooter, MouseEventArgs> args)
-    {
-        NavigationManager.NavigateTo("messages/see-all-messages");
-    }
-
-    private void HandleContent(Tuple<INavBarMenuItem, MouseEventArgs> args)
-    {
-        NavigationManager.NavigateTo("messages/see-all-messages");
-    }
-
-    private void SeeAllNotifications(Tuple<IDropdownFooter, MouseEventArgs> args)
-    {
-        NavigationManager.NavigateTo("messages/see-all-notifications");
-    }
-
-    protected override void OnAfterRender(bool isFirstRender)
-    {
-        layoutManager.IsFooterFixed = true;
-        layoutManager.IsNavBarFixed = true;
-        layoutManager.IsSideBarFixed = true;
-        base.OnAfterRender(isFirstRender);
-    }
-}
